# guestbook-client

./: AGENTS.md  LOGGING_README.md  README.md  guestbook_kiosk_plan.md  index.html  package-lock.json  package.json
.github/workflows/: ci-arm64.yml
appliance setup/: build-arm64-debian.sh  first-run-setup.bat  first-run-setup.sh  manage-service.sh
appliance-setup/: 99-hid.rules  build-arm64-debian.sh  first-run-setup.bat  first-run-setup.sh  install-tauri-deps.sh  manage-service.sh  setup-wrapper.js
legacy/: index.html  index.html.todo
legacy/lib/: devices.js
public/: deviceOnboarding.html  firstRun.html  index.html  styles.css
src/: firstRun.ts  main.ts  styles.css
src-tauri/: Cargo.toml  desktop.desktop  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hid.rs  logging.rs  main.rs
src-tauri/src/api/: devices.rs  entries.rs  mod.rs
src-tauri/src/config/: config_manager.rs  device_id.rs  mod.rs
src-tauri/src/db/: db.rs  mod.rs
src-tauri/src/devices/: barcode.rs  magtek.rs  mod.rs
src/config/: deviceConfig.ts
src/error/: errorHandler.ts
src/hid/: HIDManager.ts  barcodeScanner.ts  magstripReader.ts
src/network/: registerDevice.ts
src/sound/: soundManager.ts
