[package]
name = "guestbook-tauri-ts"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.4"
lazy_static = "1.5.0"
regex = "1"
tauri-plugin-devtools = "2.0.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
tauri-plugin-log = "2"
log = "0.4"
get_if_addrs = "0.5.3"
rand = "0.9.1"
mac_address = "1.1.8"
dirs = "6.0.0"
directories = "6.0.0"
tauri-plugin-http = "2"
chrono = "0.4.41"
tokio = { version = "1.0", features = ["time", "rt"] }
